# satisfactory-3d-map

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
libs/tinygltf/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
libsave/: CMakeLists.txt
libsave/include/SatisfactorySave/: SaveGame.h
libsave/include/SatisfactorySave/IO/: ChunkHelper.h  IOStream.h  MemoryStreams.h  ZlibUtils.h
libsave/include/SatisfactorySave/Pak/: AbstractPakFile.h  AssetExport.h  AssetFile.h  AssetObjectVisitor.h  IoStoreFile.h  PakFile.h  PakManager.h
libsave/include/SatisfactorySave/Utils/: Concepts.h  SaveTextExporter.h  StackUtils.h  StringUtils.h  VectorUtils.h
libsave/src/: SaveGame.cpp
libsave/src/GameTypes/Arrays/: Array.cpp  BoolArray.cpp  ByteArray.cpp  EnumArray.cpp  FloatArray.cpp  Int64Array.cpp  IntArray.cpp  NameArray.cpp  ObjectArray.cpp  SoftObjectArray.cpp  StrArray.cpp  StructArray.cpp
libsave/src/GameTypes/FactoryGame/: FGSaveManagerInterface.cpp  FGSaveSession.cpp
libsave/src/GameTypes/MapTypes/: ByteMapTypeList.cpp  EnumMapTypeList.cpp  FloatMapTypeList.cpp  IntMapTypeList.cpp  NameMapTypeList.cpp  ObjectMapTypeList.cpp  StructMapTypeList.cpp
libsave/src/GameTypes/Misc/: ChunkHeader.cpp  SaveActor.cpp  SaveHeader.cpp  SaveObject.cpp  SaveObjectBase.cpp
libsave/src/GameTypes/Properties/: ArrayProperty.cpp  BoolProperty.cpp  ByteProperty.cpp  DoubleProperty.cpp  EnumProperty.cpp  FloatProperty.cpp  Int64Property.cpp  Int8Property.cpp  IntProperty.cpp  MapProperty.cpp  MulticastSparseDelegateProperty.cpp  NameProperty.cpp  ObjectProperty.cpp  Properties.cpp  Property.cpp  PropertyTag.cpp  SetProperty.cpp  SoftObjectProperty.cpp  StrProperty.cpp  StructProperty.cpp  TextProperty.cpp  UInt32Property.cpp  UInt64Property.cpp  UnknownProperty.cpp
libsave/src/GameTypes/Save/: Blueprint.cpp  BlueprintCfg.cpp  ChunkHeader.cpp  ChunkHeader.h  ChunkHelper.cpp  ChunkHelper.h  SaveActor.cpp  SaveGame.cpp  SaveObject.cpp  SaveObjectBase.cpp  SerializationUtils.h
libsave/src/GameTypes/Sets/: Set.cpp  StructSet.cpp  UInt32Set.cpp
libsave/src/GameTypes/Structs/: BoxStruct.cpp  ColorStruct.cpp  FluidBoxStruct.cpp  GuidStruct.cpp  IntPointStruct.cpp  IntVectorStruct.cpp  InventoryItemStruct.cpp  LinearColorStruct.cpp  MaterialInput.cpp  PropertyStruct.cpp  QuatStruct.cpp  RailroadTrackPositionStruct.cpp  RotatorStruct.cpp  SoftClassPathStruct.cpp  Struct.cpp  Vector2DStruct.cpp  VectorStruct.cpp
libsave/src/IO/: ChunkHelper.cpp  OodleUtils.cpp  OodleUtils.h  ZlibUtils.cpp  ZlibUtils.h
libsave/src/IO/Archive/: Archive.cpp  IStreamArchive.cpp  OStreamArchive.cpp
libsave/src/Pak/: AbstractPakFile.cpp  AssetExport.cpp  AssetFile.cpp  IoStoreFile.cpp  PakFile.cpp  PakManager.cpp
libsave/src/Pak/Serialization/: PackageFileSummary.cpp  StaticMesh.cpp  Texture2D.cpp
libsave/src/Utils/: SaveTextExporter.cpp  StringUtils.cpp  TimeMeasure.h
libsavepy/: CMakeLists.txt  README.md  libsavepy.cpp  libsavepy_common.h  test.py  vector_bind_utils.h
libsavepy/GameTypes/: Arrays.cpp  MapTypes.cpp  Properties.cpp  Save.cpp  Sets.cpp  Structs.cpp
libsavepy/GameTypes/UE/: Engine.cpp  GameFramework.cpp  Internationalization.cpp  Math.cpp  Misc.cpp  Satisfactory.cpp  SatisfactoryObjects.cpp  UObject.cpp
libsavepy/examples/: foundation_pyramid.py  foundation_pyramid_1.0.py  print_blueprint_info.py  print_object_info.py  remove_foundations.py
libsavepy/src/: libsavepy_common.cpp  libsavepy_common.h  libsavepy_utils.h
libsavepy/src/GameTypes/: Arrays.cpp  FactoryGame.cpp  FactoryGamePlugins.cpp  MapTypes.cpp  Mods.cpp  Properties.cpp  Save.cpp  Sets.cpp  Structs.cpp  UE.cpp  UObjects.cpp
map/: CMakeLists.txt
map/resources/fonts/: README.md
map/resources/models/: doubleramp_8x4.glb  foundation_8x4.glb  powerpole.glb  ramp_8x2.glb  ramp_8x4.glb
map/resources/models/spline_mesh/: track.glb
map/resources/shaders/: maptile_flat.frag  maptile_flat.geom  maptile_flat.vert  maptile_mesh.frag  maptile_water.frag  maptile_water.vert  model.vert  model_pak.frag  model_pak.vert  powerline.frag  powerline.vert  quad.frag  selectionmarker.frag  selectionmarker.vert  splinemesh.vert  texture_copy.comp  world.frag  world.tese  world.vert
map/resources/textures/Map/: README.md
map/src/: main.cpp
map/src/MapWindow/: AboutWindow.cpp  AboutWindow.h  BaseWindow.cpp  BaseWindow.h  MapWindow.cpp  MapWindow.h  ModelRenderer.cpp  ModelRenderer.h  PakExplorer.cpp  PakExplorer.h
map/src/MapWindow/Camera/: AbstractCamera.h  Camera3D.cpp  Camera3D.h  OrbitCamera.cpp  OrbitCamera.h  Trackball.cpp  Trackball.h
map/src/MapWindow/Config/: BoolSetting.cpp  BoolSetting.h  Configuration.cpp  Configuration.h  EnumSetting.cpp  EnumSetting.h  FloatSetting.h  PathSetting.cpp  PathSetting.h  Setting.h  SettingVisitor.h  SettingsWindow.cpp  SettingsWindow.h  StringSetting.cpp
map/src/MapWindow/DataView/: DataView.cpp  DataView.h  MeshManager.cpp  MeshManager.h  ModelManager.cpp  ModelManager.h  ObjectProxy.h  SplineData.cpp  SplineData.h
map/src/MapWindow/OpenGL/: GlowlFactory.cpp  GlowlFactory.h  GltfModel.cpp  GltfModel.h  Texture.cpp  Texture.h
map/src/MapWindow/Pak/: AssetObjectWindow.cpp  AssetObjectWindow.h  AssetWindow.cpp  AssetWindow.h  PakExplorer.cpp  PakExplorer.h
map/src/MapWindow/UI/: AssetObjectEditor.cpp  AssetObjectEditor.h  CommonUI.h  ObjectEditor.cpp  ObjectEditor.h  ObjectWidgets.cpp  ObjectWidgets.h  PlotStaticMesh.cpp  PlotStaticMesh.h  PropertyEditor.cpp  PropertyEditor.h  PropertyTableEditor.cpp  PropertyTableEditor.h  PropertyTableGuiRenderer.cpp  PropertyTableGuiRenderer.h
map/src/MapWindow/World/: MapLODReader.cpp  MapLODReader.h  MapLODglTFWriter.cpp  MapLODglTFWriter.h  MapTileRenderer.cpp  MapTileRenderer.h  WorldRenderer.cpp  (+1 more)
map/src/Utils/: ConsoleUtils.cpp  ConsoleUtils.h  FileDialogUtil.cpp  FileDialogUtil.h  FilesystemUtil.cpp  FilesystemUtil.h  GLMUtil.h  GLUtil.h  ImGuiUtil.h  LinkUtil.h  ResourceUtils.cpp  ResourceUtils.h
(+701 files in other folders)
